fix(java): make SwiftXlangTest compatible with Java 8